# rust-pathtracer

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md
src/: app.rs  camera.rs  canvas.rs  color.rs  hittable.rs  interval.rs  main.rs  material.rs  quad.rs  ray.rs  renderer.rs  scene.rs  sphere.rs  vec_rand.rs
